--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-requests~=2.32.4
-beautifulsoup4~=4.13.4
-pandas~=2.1.3
+beautifulsoup4==4.13.4
+numpy==2.2.6
+pandas==2.3.1
+rdkit==2025.3.3
+requests==2.32.4
