--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,3 +24,6 @@ jobs:
     - name: Lint with Isort
       run: |
         isort . -c -v
+    - name: Test with Pytest
+      run: |
+        pytest test
